Add best container

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <h1 class="title">121393</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
+        <div class="best-container">0</div>
       </div>
     </div>
 
@@ -79,7 +80,7 @@
     </div>
 
     <p class="game-explanation">
-      Use your arrow keys or WASD (on computer) or swipe (on mobile) to move the tiles. When two neighboring numbers from the <a href="http://en.wikipedia.org/wiki/Fibonacci_number">Fibonacci sequence</a> touch, they <strong>merge into the next one!</strong><br>
+      <strong class="important">How to play:</strong> Use your arrow keys or WASD (on computer) or swipe (on mobile) to move the tiles. When two neighboring numbers from the <a href="http://en.wikipedia.org/wiki/Fibonacci_number">Fibonacci sequence</a> touch, they <strong>merge into the next one!</strong><br>
       The Fibonacci sequence starts <strong>1, 1</strong> and to get the next number in the sequence, add the previous two together. Try to get the <strong>121393 tile!</strong> Good luck!<br>
     </p>
     <hr>
