--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>121393 5x5</title>
+  <title>196418</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">121393</h1>
+      <h1 class="title">196418</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers in sequence for the 121393 tile!</p>
+      <p class="game-intro">Join the numbers in sequence for the 196418 tile!</p>
       <a class="restart-button">Restart</a>
     </div>
 
@@ -81,7 +81,7 @@
 
     <p class="game-explanation">
       <strong class="important">How to play:</strong> Use your arrow keys or WASD (on computer) or swipe (on mobile) to move the tiles. When two neighboring numbers from the <a href="http://en.wikipedia.org/wiki/Fibonacci_number">Fibonacci sequence</a> touch, they <strong>merge into the next one!</strong><br>
-      The Fibonacci sequence starts <strong>1, 1</strong> and to get the next number in the sequence, add the previous two together. Try to get the <strong>121393 tile!</strong> Good luck!<br>
+      The Fibonacci sequence starts <strong>1, 1</strong> and to get the next number in the sequence, add the previous two together. Try to get the <strong>196418 tile!</strong> Good luck!<br>
     </p>
     <hr>
       <p>Based on cozmic72's <a href="http://cozmic72.github.io/987">987 game</a>, which in turn was based on 2048, created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli,</a> which was in turn based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a> The adaptation to the Fibonacci sequence is by Jonathan Ross, aka cozmic72. Colors, font, and goal tweaked by Scott Carroll, aka marblelover003.
